--- a/www/templates/create-order.html
+++ b/www/templates/create-order.html
@@ -1,4 +1,11 @@
 <ion-view title="Create">
+	<ion-nav-buttons side="left">
+    <button class="button button-icon button-clear ion-navicon" ng-click="toggleLeft()">
+    </button>
+  </ion-nav-buttons>
+  <ion-nav-title>
+    Create Order
+  </ion-nav-title>
     <ion-content padding="'true'" class="has-header">
 		<button ng-click="submit()" class="button button-positive button-block ">Submit</button>
 		<div>
