--- a/www/templates/detail.html
+++ b/www/templates/detail.html
@@ -1,4 +1,11 @@
 <ion-view title="Orders Detail">
+	<ion-nav-buttons side="left">
+    <button class="button button-icon button-clear ion-navicon" ng-click="toggleLeft()">
+    </button>
+  </ion-nav-buttons>
+  <ion-nav-title>
+    Order Detail
+  </ion-nav-title>
     <ion-content padding="'true'" class="has-header">
         <div>
             <p>Total :
