--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -87,15 +87,15 @@
           Home
         </a>
 
-        <a class="item item-icon-left" ui-sref="app.order" ui-sref-active="balanced" menu-close>
+        <a class="item item-icon-left" ui-sref="app.order-list" ui-sref-active="balanced" menu-close>
           <i class="icon ion-android-cart"></i>
           Orders
         </a>
 
-        <a class="item item-icon-left" ui-sref="app.create-order" ui-sref-active="balanced" menu-close>
+        <!-- <a class="item item-icon-left" ui-sref="app.create-order" ui-sref-active="balanced" menu-close>
           <i class="icon ion-android-add-circle"></i>
           Create Order
-        </a>
+        </a> -->
 
         <a class="item item-icon-left" ui-sref="app.payment" ui-sref-active="balanced" menu-close>
           <i class="icon ion-cash"></i>
