--- a/www/templates/orderform.html
+++ b/www/templates/orderform.html
@@ -43,6 +43,10 @@
 				                <span class="input-label">Date</span>
 				                <input ng-model="item.date" type="date" readonly="" value="{{order.date}}" placeholder="">
 				            </label>
+				            <label class="item item-input">
+				                <span class="input-label">Remarks</span>
+				                <input ng-model="item.remarks" type="text" placeholder="">
+				            </label>
 				        </ion-list>
 					</div>
 				</div>
